# CBG

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cbg.hpp
Research/: research_cuckoo_cbg.md  research_cuckoo_lsa.md
Website/config/_default/: config.toml  menus.toml  params.toml
Website/content/authors/admin/: _index.md
Website/content/contact/: contact.md  index.md
Website/content/home/: demo.md  examples.md  featured.md  features.md  header.md  minimal_explanation.md  skills.md
Website/content/publication/: _index.md  research_cuckoo_cbg.md  research_cuckoo_lsa.md
Website/themes/academic/assets/sass/academic/: _content.scss
Website/themes/academic/layouts/partials/: navbar.html  site_footer.html
Website/themes/academic/layouts/partials/widgets/: hero.html
comparison/: compare_bench.cpp  comparison.cpp
